# Auto-YouTube-Video-Generate-and-Uplaod

./: .env  .replit  client_secret.json  main.py  pyproject.toml  requirements.txt
static/: app.js  style.css
templates/: index.html  setup.html
